--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: "devopshint/nodejsapp-1.0:latest"
+        image: "rushidockerhub1881/node-app1:latest"
         ports:
           - containerPort: 3000
 ---
